fixed spacing between table and image on Roaster show page (issue was not in desktop view)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -207,3 +207,7 @@ button.btn-delete {
 .my-reviews {
 	margin-bottom: 50px;
 }
+
+#roaster-pic {
+	margin-bottom: 20px;
+}
